# a2a

./: .env.example  .gitignore  .prow.yaml  OWNERS  README.md  README_GEMINI.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  deploy-docs-dev.yml  deploy-docs.yml
docs/: adding_functions.md  ci_implementation.md  helm-deployment-guide.md  multi_namespace_gvrc_support.md
docs-site/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs-site/docs/: cli-reference.md  intro.md
docs-site/docs/getting-started/: index.md  installation.md  kubestellar-setup.md  quick-start.md
docs-site/src/css/: custom.css
docs-site/src/pages/: index.module.css  index.tsx
src/a2a/: agent.py  cli.py
src/llm_providers/: __init__.py  base.py  config.py  openai.py  registry.py
src/mcp/: server.py
src/shared/: base_functions.py
src/shared/functions/: __init__.py  deploy_to.py  get_cluster_labels.py  gvrc_discovery.py  helm_deploy.py  kubeconfig.py  kubestellar_management.py  kubestellar_setup.py  multicluster_create.py  multicluster_logs.py  namespace_utils.py
tests/: test_base_functions.py  test_cli.py  test_gvrc_discovery.py  test_helm_deploy.py  test_kubeconfig.py  test_kubestellar_management.py  test_kubestellar_setup.py  test_namespace_utils.py
